--- a/otk22/Properties/Resources.resx
+++ b/otk22/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="vis_on16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\vis_on16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="login48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\login48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="login20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\login20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
